@startuml database schema
!theme plain
hide circle
skinparam linetype ortho

entity "categories" {
  *id: SERIAL <<PK>>
  --
  name: VARCHAR(255)
  description: VARCHAR(255)
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity "users" {
  *id: SERIAL <<PK>>
  --
  first_name: VARCHAR(255)
  last_name: VARCHAR(255)
  email: VARCHAR(255)
  password_hash: VARCHAR(255)
  role: VARCHAR(255)
  is_verified: BOOLEAN
  email_verification_token: VARCHAR(255)
  password_reset_token: VARCHAR(255)
  password_reset_expires: TIMESTAMPTZ
  password_changed_at: TIMESTAMPTZ
  otp_hash: VARCHAR(255)
  otp_expires: TIMESTAMPTZ
  provider: VARCHAR(255)
  provider_id: VARCHAR(255)
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity "products" {
  *id: SERIAL <<PK>>
  --
  name: VARCHAR(255)
  description: TEXT
  price: DECIMAL(10, 2)
  stock: INTEGER
  image_url: VARCHAR(255)
  category_id: INTEGER <<FK>>
  is_featured: BOOLEAN
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity "orders" {
  *id: SERIAL <<PK>>
  --
  user_id: INTEGER <<FK>>
  total_amount: DECIMAL(10, 2)
  status: VARCHAR(255)
  shipping_address: TEXT
  payment_method: VARCHAR(255)
  payment_details: JSONB
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity "order_items" {
  *id: SERIAL <<PK>>
  --
  order_id: INTEGER <<FK>>
  product_id: INTEGER <<FK>>
  quantity: INTEGER
  price: DECIMAL(10, 2)
}

entity "cart_items" {
  *id: SERIAL <<PK>>
  --
  user_id: INTEGER <<FK>>
  product_id: INTEGER <<FK>>
  quantity: INTEGER
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity "wishlists" {
  *id: SERIAL <<PK>>
  --
  user_id: INTEGER <<FK>>
  product_id: INTEGER <<FK>>
}

entity "notifications" {
  *id: SERIAL <<PK>>
  --
  user_id: INTEGER <<FK>>
  message: TEXT
  link: VARCHAR(255)
  is_read: BOOLEAN
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity "support_tickets" {
  *id: SERIAL <<PK>>
  --
  user_id: INTEGER <<FK>>
  subject: VARCHAR(255)
  message: TEXT
  status: VARCHAR(255)
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

entity "support_ticket_replies" {
  *id: SERIAL <<PK>>
  --
  ticket_id: INTEGER <<FK>>
  user_id: INTEGER <<FK>>
  message: TEXT
  created_at: TIMESTAMPTZ
  updated_at: TIMESTAMPTZ
}

categories ||--o{ products : category_id
users ||--|{ orders : user_id
orders ||--|{ order_items : order_id
products ||--o{ order_items : product_id
users ||--|{ cart_items : user_id
products ||--|{ cart_items : product_id
users ||--|{ wishlists : user_id
products ||--|{ wishlists : product_id
users ||--|{ notifications : user_id
users ||--|{ support_tickets : user_id
support_tickets ||--|{ support_ticket_replies : ticket_id
users ||--|{ support_ticket_replies : user_id

@enduml
